sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:22: error: ';' expected but ',' found.
alignés dans le bon ordre, le nain se déplace en avant d'un pot de
                         ^AlgGnomeSort:23: error: ';' expected but ',' found.
fleurs, sinon il les échange et se déplace en arrière d'un pot de 
      ^AlgGnomeSort:24: error: ';' expected but symbol literal found.
fleur. Condition aux limites : si il n'y a pas de pot de fleurs
                                      ^AlgGnomeSort:25: error: ';' expected but ',' found.
précédent, le nain avance ; si il n'y a pas de pot suivant alors il a 
         ^AlgGnomeSort:25: error: ';' expected but symbol literal found.
précédent, le nain avance ; si il n'y a pas de pot suivant alors il a 
                                   ^AlgGnomeSort:29: error: identifier expected but '}' found.
}
^